crates/viewer/re_component_fallbacks/tests/snapshots/all_component_fallbacks__arch_fallback_rerun.archetypes.BarChart.snap
---
source: crates/viewer/re_component_fallbacks/tests/all_component_fallbacks.rs
expression: arch_display
---
[
    (
        "values",
        [
            "{shape: [], names: null, buffer: {U8=[]}}",
        ],
    ),
    (
        "color",
        [
            "2428259839",
        ],
    ),
    (
        "abscissa",
        [
            "{shape: [0], names: null, buffer: {I64=[]}}",
        ],
    ),
]
