crates/viewer/re_component_fallbacks/tests/snapshots/all_component_fallbacks__arch_fallback_rerun.archetypes.Capsules3D.snap
---
source: crates/viewer/re_component_fallbacks/tests/all_component_fallbacks.rs
expression: arch_display
---
[
    (
        "lengths",
        [
            "1.0",
        ],
    ),
    (
        "radii",
        [
            "0.5",
        ],
    ),
    (
        "translations",
        [
            "[0.0, 0.0, 0.0]",
        ],
    ),
    (
        "rotation_axis_angles",
        [
            "{axis: [1.0, 0.0, 0.0], angle: 0.0}",
        ],
    ),
    (
        "quaternions",
        [
            "[0.0, 0.0, 0.0, 1.0]",
        ],
    ),
    (
        "colors",
        [
            "2428259839",
        ],
    ),
    (
        "line_radii",
        [
            "0.5",
        ],
    ),
    (
        "fill_mode",
        [
            "1",
        ],
    ),
    (
        "labels",
        [
            "",
        ],
    ),
    (
        "show_labels",
        [
            "true",
        ],
    ),
    (
        "class_ids",
        [
            "0",
        ],
    ),
]
